# tourists_trap

./: .gitmodules  CMakeLists.txt  README.md  in.txt  liz_main.cpp  liz_main_v02.cpp  main.cpp  my_vector.cpp  my_vector.h  out.txt
kruskala/: liz_main.cpp  liz_main_v02.cpp  main.cpp
liz_prim/: main.cpp
lizzy/: liz_main_v02.cpp  node.cpp  node.h  tree.cpp  tree.h
prima/: gen_data.cpp  main.cpp  prim_in  prim_in2
windows_console_tools/: win_colors.cpp  win_colors.h
